--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.github.Aspsine:IRecyclerView:0.0.5'
+    compile 'com.shawnlin:number-picker:2.4.4'
 }
