--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,8 @@ dependencies {
     compile 'com.github.Aspsine:IRecyclerView:0.0.5'
     compile 'com.shawnlin:number-picker:2.4.4'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    //noinspection GradleCompatible
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
